# NodeJsAddons

./: .gitignore  readme.md
Callback/: binding.gyp  callback.cpp  index.js
CallbackWithParams/: binding.gyp  callbackWithParams.cpp  index.js
Cmath/: binding.gyp  cmath.cpp  index.js
CreateJsObject/: binding.gyp  createJsObjects.cpp  index.js
JsToCppTypeConversion/: binding.gyp  index.js  passNumber.cpp
MathAddon/: binding.gyp  index.js  package.json  pow.cpp
RainfallAnalyzer/: rainfall.js
RainfallAnalyzer/cpp/: binding.gyp  rainfall.cpp  rainfall.h  rainfallNode.cpp
StrToInt/: binding.gyp  index.js  package.json  strToInt.cpp
StringAddon/: binding.gyp  stdstring.cc  stdstring.h
TypeConversions/: binding.gyp  index.js  typeConversions.cpp
UsingCmakeJs/Peripherals/: CMakeLists.txt  id_scanner.js  main.cpp  package.json
UsingCmakeJs/Peripherals/src/: id_scanner.cpp  id_scanner.h
cmath/: index.js
